[workspace]
members = ["get_guard_num", "setup_guard_redirection"]

[package]
name = "coreutils"
version = "0.1.0"
authors = ["Valentin Huber <contact@valentinhuber.me"]
edition = "2021"
license = "MIT"

[profile.release]
# lto = true
# codegen-units = 1
# opt-level = 3
debug = true

[dependencies]
libafl = { path = "../../libafl/" }
libafl_bolts = { path = "../../libafl_bolts/" }
libafl_cc = { path = "../../libafl_cc" }
libc = "0.2"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
