[package]
name = "qemu_coreutils_differential"
version = "0.11.2"
authors = ["Valentin Huber <fuzzing@valentinhuber.me>"]
edition = "2021"

[profile.release]
#lto = true
#codegen-units = 1
#opt-level = 3
debug = true

[features]
default = ["std"]
std = []

[dependencies]
clap = { version = "4.3.0", features = ["derive", "string"] }
libafl = { path = "../../libafl/" }
libafl_bolts = { path = "../../libafl_bolts/" }
libafl_qemu = { path = "../../libafl_qemu/", features = ["usermode"] }
log = { version = "0.4.20" }
rangemap = { version = "1.3" }
