[package]
name = "coreutils_differential"
version = "0.1.0"
authors = ["Valentin Huber <contact@valentinhuber.me"]
edition = "2021"
license = "MIT"

[lib]
name = "coreutils_differential"
crate_type = ["cdylib"]

[features]
default = ["std"]
std = []

[profile.release]
# lto = true
# codegen-units = 1
# opt-level = 3
# debug = true

[build-dependencies]
cc = { version = "1.0.42", features = ["parallel"] }
which = "4.4"
xz2 = "0.1.6"
flate2 = "1.0.22"
tar = "0.4.37"
reqwest = { version = "0.11.4", features = ["blocking"] }

[dependencies]
libafl = { path = "../../libafl/", features = [
    "std",
    "llmp_compression",
    "llmp_bind_public",
] } #,  "llmp_small_maps", "llmp_debug"]}
libafl_bolts = { path = "../../libafl_bolts/" }
libafl_targets = { path = "../../libafl_targets", features = ["sancov_cmplog"] }
libafl_cc = { path = "../../libafl_cc" }
libc = "0.2"
libloading = "0.7"
num-traits = "0.2"
rangemap = "1.3"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
mimalloc = { version = "*", default-features = false }

backtrace = "0.3"
color-backtrace = "0.5"

[[bin]]
name = "fuzzer"
path = "src/main.rs"

[[bin]]
name = "libafl_cc"
path = "src/bin/libafl_cc.rs"
